--- a/html/details.html
+++ b/html/details.html
@@ -47,7 +47,7 @@
     <div class="col-md-3 col-sm-4 product-options well">
       <h4>Quantity</h4>
       <div class="form-group">
-        <input ng-change="qtyFunc(quantity)" ng-model="quantity" class="form-control quantity" value="1" type="number" pattern="[0-9]*" inputmode="numeric" min="1" />
+        <input ng-change="qtyFunc(quantity)" ng-model="quantity" class="form-control quantity"  type="number"  inputmode="numeric" min="1" />
       </div>
       <div class="price">
         <h1 id="result">{{ totals = product.price * quantity | currency }}</h1>
