--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <img src="{{c.imgMain}}" class="col-7" alt="">
           <div class="blockInfo col-5">
             <small>{{c.name}}</small>
-            <div> quantity : {{c.qty}} </div>
+            <div> quantity : {{c.quantity}} </div>
             <div> total : {{c.total | currency}}</div>
             <input class="btn btn-danger" type="button" ng-click="delete($index)" value="Remove" />
           </div>
