--- a/html/home.html
+++ b/html/home.html
@@ -11,7 +11,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-8 col-sm-12 wrapper" >
           <div class="container">
-            <div class="content">
+            <div class="contentAbout">
               <div class="image-about">
                 <img src="images/about/pottery.jpg" alt="" width="250" height="250">
               </div>
