--- a/html/home.html
+++ b/html/home.html
@@ -53,10 +53,10 @@
           <div class="owl-carousel SliderTopDeal owl-theme">
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product1.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/decoration object/raw marble object.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>RAW MARBLE OBJECT</h4>
+                  <h5>$ <span class="text-center">39.95</span></h5>
 
                 </div>
               </div>
@@ -65,10 +65,10 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product2.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/ProductDetails/img30.jpeg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>RUSH BRUSHED GOLD</h4>
+                  <h5>$ <span class="text-center">89.95</span></h5>
 
                 </div>
               </div>
@@ -77,10 +77,10 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product3.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/ProductDetails/img10.jpeg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>SUR REACTIVE VASE</h4>
+                  <h5>$ <span class="text-center">29.95</span></h5>
 
                 </div>
               </div>
@@ -89,10 +89,10 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product4.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/ProductDetails/img40.jpeg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>BONDI MOSAIC WALL</h4>
+                  <h5>$ <span class="text-center">199.00</span></h5>
 
                 </div>
               </div>
@@ -101,10 +101,10 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product5.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/GLASS/glass4, Surge black and white glass vase.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>SURGE BLACK AND WHITE</h4>
+                  <h5>$ <span class="text-center">99.00</span></h5>
 
                 </div>
               </div>
@@ -113,10 +113,10 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product6.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/ProductDetails/img50.jpeg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>4 STAR PILLAR CANDLE</h4>
+                  <h5>$ <span class="text-center">44.95</span></h5>
 
                 </div>
               </div>
@@ -125,10 +125,10 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product7.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/ProductDetails/img70.jpeg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>DAPHNE GLASS</h4>
+                  <h5>$ <span class="text-center">19.95</span></h5>
 
                 </div>
               </div>
@@ -154,10 +154,10 @@
           <div class="owl-carousel SliderTopDeal owl-theme">
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product1.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/Home Decor/potted 6 faux golden barrel cactus.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>GOLDEN BARREL CACTUS</h4>
+                  <h5>$ <span class="text-center">4.99</span></h5>
 
                 </div>
               </div>
@@ -166,10 +166,10 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product2.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/candle accessories/candle1.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>GOLDEN CANDLE HOLDER</h4>
+                  <h5>$ <span class="text-center">23.00</span></h5>
 
                 </div>
               </div>
@@ -178,10 +178,10 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product3.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/candle accessories/candle2.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>NELUMBO NUCIFERA</h4>
+                  <h5>$ <span class="text-center">25.00</span></h5>
 
                 </div>
               </div>
@@ -190,10 +190,10 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product4.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/candle accessories/Candle3.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>GLASS CANDLE KEEPER</h4>
+                  <h5>$ <span class="text-center">12</span></h5>
 
                 </div>
               </div>
@@ -202,10 +202,10 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product5.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/candle accessories/candle4.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>GLASS VASE CANDLE</h4>
+                  <h5>$ <span class="text-center">9.59</span></h5>
 
                 </div>
               </div>
@@ -214,10 +214,10 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product6.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/Home Decor/Loves neon red.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>LOVES NEON RED</h4>
+                  <h5>$ <span class="text-center">18.00</span></h5>
 
                 </div>
               </div>
@@ -226,10 +226,10 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/product/product7.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/Home Decor/Nassa basket pendant light.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
-                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
-                  <h5>$ <span class="text-center">23</span></h5>
+                  <h4>NASSA BASKET PENDANT</h4>
+                  <h5>$ <span class="text-center">509.99</span></h5>
 
                 </div>
               </div>
