--- a/html/cart.html
+++ b/html/cart.html
@@ -2,7 +2,7 @@
     <div class="well">
         <div class="row">
           <div class="col-md-6 col-xs-6">
-            <a href="#!/products"> &#60; Continue Shopping</a>
+            <a href="#!/products" style="color: inherit;"> &#60; Continue Shopping</a>
           </div>
           <div class="col-md-6 col-xs-6">
             <button type="button" class="btn btn-dark btn-block">
