--- a/html/cart.html
+++ b/html/cart.html
@@ -61,7 +61,7 @@
             <tr>
                 <td>
                     Shipping
-                    <br><a href="">China</a>
+                    <br><a href="#" style="color: inherit;">China</a>
                 </td>
                 <td></td>
                 <td>FREE</td>
