--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </ul>
 
     </div>
-    <div class="cart-foot"><h3>Total: {{totals | currency}}</h3><a ui-sref='cart'>View Cart</a></div>
+    <div class="cart-foot"><h3>Total: {{totals | currency}}</h3><a ui-sref='cart' style="color: inherit;">View Cart</a></div>
   </div>
   <!-- End of CartShow -->
   <div class="contact">
