--- a/html/faq.html
+++ b/html/faq.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="../css/faq.css">
-</head>
-<body>
-
+<div class="respon">
   <div class="page-heading">
     <h1>FAQs</h1>
       <div class="container">
@@ -48,7 +38,4 @@
     <h5>17. How to sign up and start a new account?</h5>
     <p>Please click register, in the registration section. You will be able to fill in your information as required.</p>
     <p>Registration will be completed and you will receive a confirmation email to the registered mail id.</p>
-
-
-  </body>
-</html>
+</div>
