--- a/html/home.html
+++ b/html/home.html
@@ -53,7 +53,7 @@
           <div class="owl-carousel SliderTopDeal owl-theme">
             <div class="item">
               <div class="card">
-                <a><img src="images/decoration object/raw marble object.jpg" alt="" class="card-img-top"></a>
+                <a ui-sref='details({ ProductId :  "001"  })'><img src="images/decoration object/raw marble object.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>RAW MARBLE OBJECT</h4>
                   <h5>$ <span class="text-center">39.95</span></h5>
@@ -65,7 +65,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/ProductDetails/img30.jpeg" alt="" class="card-img-top"></a>
+                <a ui-sref='details({ ProductId :  "004"  })'><img src="images/ProductDetails/img30.jpeg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>RUSH BRUSHED GOLD</h4>
                   <h5>$ <span class="text-center">89.95</span></h5>
@@ -77,7 +77,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/ProductDetails/img10.jpeg" alt="" class="card-img-top"></a>
+                <a ui-sref='details({ ProductId :  "002"  })'><img src="images/ProductDetails/img10.jpeg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>SUR REACTIVE VASE</h4>
                   <h5>$ <span class="text-center">29.95</span></h5>
@@ -89,7 +89,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/ProductDetails/img40.jpeg" alt="" class="card-img-top"></a>
+                <a ui-sref='details({ ProductId :  "005"  })'><img src="images/ProductDetails/img40.jpeg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BONDI MOSAIC WALL</h4>
                   <h5>$ <span class="text-center">199.00</span></h5>
