--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </ul>
 
     </div>
-    <div class="cart-foot"><h3>Totals : {{totals | currency}}</h3><a ui-sref='cart'>view cart</a></div>
+    <div class="cart-foot"><a ui-sref='cart'>view cart</a></div>
   </div>
   <!-- End of CartShow -->
   <div class="contact">
@@ -197,6 +197,9 @@
           </div>
           <div class="FooterLink">
             <a href="#"><p>Report a Bug</p></a>
+          </div>
+          <div class="FooterLink">
+            <a ui-sref='faq'><p>FAQ</p></a>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
