--- a/html/gallery.html
+++ b/html/gallery.html
@@ -2,10 +2,10 @@
     <h1 class="gallery-title">Gallery</h1>
     <div class="sometext">
       <h1 class="mb-3">our collection</h1>
-      <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. I’m a great place for you to tell a story and let your users know a
-        little more about you.</p>
+  
+        <p>These are our products. Included is Teampot, Creamic, Vase, Teacup, Glass, Candle, Home-Decor, Wood, Table-wares, Decoration-Object.</p>
 
-    </div> 
+    </div>
     <div class="row">
       <div align="center" class='col-12'>
         <button class="filter-button actives" data-filter="all">All</button>
