--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- css-link -->
+  <link rel="stylesheet" href="css/faq.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/aboutus.css">
   <link rel="stylesheet" href="css/home.css">
