--- a/html/faq.html
+++ b/html/faq.html
@@ -1,5 +1,5 @@
 <div class="respon">
-  <div class="page-heading">
+  <div class="page-heading faq">
     <h1>FAQs</h1>
       <div class="container">
     <h4>FREQUENTLY ASKED QUESTIONS</h4>
