--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/aboutus.css">
   <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/faq.css">
   <link rel="stylesheet" href="css/gallery.css">
   <link rel="stylesheet" href="css/contactus.css">
   <link rel="stylesheet" href="css/products.css">
