--- a/html/home.html
+++ b/html/home.html
@@ -53,7 +53,7 @@
           <div class="owl-carousel SliderTopDeal owl-theme">
             <div class="item">
               <div class="card">
-                <a ui-sref='details({ ProductId :  "001"  })'><img src="images/decoration object/raw marble object.jpg" alt="" class="card-img-top"></a>
+                <a ui-sref='details({ ProductId :  "001"  })'><img src="images/ProductDetails/img00.jpeg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>RAW MARBLE OBJECT</h4>
                   <h5>$ <span class="text-center">39.95</span></h5>
