--- a/html/home.html
+++ b/html/home.html
@@ -154,7 +154,7 @@
           <div class="owl-carousel SliderTopDeal owl-theme">
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/Home Decor/potted 6 faux golden barrel cactus.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/Home Decor/Potted 6 faux golden barrel cactus.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>GOLDEN BARREL CACTUS</h4>
                   <h5>$ <span class="text-center">4.99</span></h5>
@@ -166,7 +166,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/candle accessories/candle1.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/candle accessories/Candle1.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>GOLDEN CANDLE HOLDER</h4>
                   <h5>$ <span class="text-center">23.00</span></h5>
@@ -178,7 +178,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/candle accessories/candle2.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/candle accessories/Candle2.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>NELUMBO NUCIFERA</h4>
                   <h5>$ <span class="text-center">25.00</span></h5>
@@ -202,7 +202,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="images/candle accessories/candle4.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/candle accessories/Candle4.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>GLASS VASE CANDLE</h4>
                   <h5>$ <span class="text-center">9.59</span></h5>
