--- a/html/home.html
+++ b/html/home.html
@@ -1,7 +1,7 @@
 <div class="banner">
   <img src="images/banner.jpg" alt="">
   <div class="layer">
-    <div class="down">venus Handicraft</div>
+    <div class="down">venus Handicrafts</div>
     <div class="qoute">we bring out the best</div>
     <a class="findMore" ui-sref='aboutus'>find more</a>
   </div>
