--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </ul>
 
     </div>
-    <div class="cart-foot"><a ui-sref='cart'>view cart</a></div>
+    <div class="cart-foot"><a ui-sref='cart' style="color: inherit">View Cart</a></div>
   </div>
   <!-- End of CartShow -->
   <div class="contact">
@@ -203,21 +203,24 @@
           <div class="FooterLink">
             <a ui-sref='faq'><p>FAQ</p></a>
           </div>
+          <div class="FooterLink">
+            <a ui-sref='sitemap'><p>Sitemap</p></a>
+          </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
           <header class="footer-title">
             <h2>Reach Us</h2>
           </header>
-          <p>8 Ton That Thuyet St,Nam Tu Liem,Hanoi</p>
-          <p>Tell: +84916-888-991</p>
+          <p>8 Ton That Thuyet St, Nam Tu Liem, Hanoi</p>
+          <p>Tel: +84916-888-991</p>
           <p>Email: info@venus.com</p>
           <p>Mon-Fri: 7am-5pm</p>
           <p>Saturday: 8am-5pm</p>
-          <p>Sunday:8am-11pm</p>
+          <p>Sunday: 8am-11pm</p>
         </div>
       </div>
       <div class="CopyRight">
-        Copyright &copy; 2019 by Venus-Handicraft.
+        Copyright &copy; 2019 by Venus-Handicrafts.
       </div>
   </footer>
 </body>
