--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
           <img src="{{c.imgMain}}" class="col-7" alt="">
           <div class="blockInfo col-5">
             <small>{{c.name}}</small>
-            <div> quantity : {{c.quantity}} </div>
-            <div> total : {{c.total | currency}}</div>
+            <div> Quantity: {{c.quantity}} </div>
+            <div> Total: {{c.total | currency}}</div>
             <input class="btn btn-danger" type="button" ng-click="delete($index)" value="Remove" />
           </div>
         </li>
