--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <small>{{c.name}}</small>
             <div> Quantity: {{c.quantity}} </div>
             <div> Total: {{c.total | currency}}</div>
-            <input class="btn btn-danger" type="button" ng-click="delete($index)" value="Remove" />
+            <input class="btn btn-secondary" type="button" ng-click="delete($index)" value="Remove" />
           </div>
         </li>
       </ul>
