--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="css/gallery.css">
   <link rel="stylesheet" href="css/contactus.css">
   <link rel="stylesheet" href="css/products.css">
-  <link rel="stylesheet" href="OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css">
+  <link rel="stylesheet" href="src/OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="src/OwlCarousel2-2.3.4/dist/assets/owl.theme.default.min.css">
   <!-- font-awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- bootstrap -->
@@ -43,20 +43,20 @@
   <script src="js/app.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="OwlCarousel2-2.3.4/dist/owl.carousel.min.js" type="text/javascript"></script>
+  <script src="src/OwlCarousel2-2.3.4/dist/owl.carousel.min.js" type="text/javascript"></script>
   <script src="js/main.js" charset="utf-8"></script>
   <script src="js/formvalidation.js" charset="utf-8"></script>
   <!-- product details -->
-  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+  <link rel="stylesheet" type="text/css" href="src/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="src/slick/slick-theme.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
   <link rel="stylesheet" href="css/readmore.css">
   <!-- External Css file -->
   <link rel="stylesheet" href="css/productdetail.css">
   <link rel="stylesheet" href="css/cart.css">
-  <script src="slick/slick.js"></script>
+  <script src="src/slick/slick.js"></script>
   <!-- Angular-Slick -->
-  <script src="slick/dist/slick.js"></script>
+  <script src="src/slick/dist/slick.js"></script>
   <title>Home</title>
 </head>
 <body ng-controller='mainCtrl'>
